<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="nav_view">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/myProfile"
            android:icon="@drawable/ic_person"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/favouriteRestaurants"
            android:icon="@drawable/ic_favorite"
            android:title="@string/favourite_restaurants" />
        <item
            android:id="@+id/orderHistory"
            android:icon="@drawable/ic_history"
            android:title="@string/order_history" />
        <item
            android:id="@+id/faqs"
            android:icon="@drawable/ic_faqs"
            android:title="@string/faqs" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_exit"
            android:title="@string/log_out" />
    </group>

</menu>