<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/sort"
        android:icon="@drawable/ic_sort_filter"
        android:orderInCategory="100"
        android:title="@string/sort"
        app:showAsAction="ifRoom">
        <menu>

            <item
                android:id="@+id/sortRating"
                android:title="@string/rating"
                app:showAsAction="never" />

            <item
                android:id="@+id/sortCostHighLow"
                android:title="@string/price_descending" />

            <item
                android:id="@+id/sortCostLowHigh"
                android:title="@string/price_ascending" />

        </menu>
    </item>

</menu>