<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/imageViewAppIcon"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageViewAppIcon"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textColor="@color/lighterGray"
        android:textSize="25sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/loginCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_margin="25dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp">


            <EditText
                android:id="@+id/etMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/rounded_view"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="4dp"
                android:hint="@string/enter_phone"
                android:inputType="number"
                android:maxLength="10"
                android:textColorHint="@color/lighterGray"
                android:padding="10dp"
                android:textSize="15sp" />


            <EditText
                android:id="@+id/etPassword"
                android:textColorHint="@color/lighterGray"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/etMobileNumber"
                android:layout_margin="15dp"
                android:background="@drawable/rounded_view"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="4dp"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etPassword"
                android:layout_margin="15dp"
                android:text="@string/login"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txtForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnLogin"
                android:layout_centerHorizontal="true"
                android:text="@string/forgot_password"
                android:textColor="@color/lighterGray"
                android:textSize="15sp" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginCard"
        android:layout_centerInParent="true" />


    <TextView
        android:id="@+id/txtSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:text="@string/sign_up_text"
        android:textColor="@color/lighterGray"
        android:textSize="15sp" />


</RelativeLayout>