<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:paddingTop="10dp"
    android:layout_height="match_parent"
    tools:context=".fragment.ProfileFragment">


    <androidx.cardview.widget.CardView
        android:id="@+id/loginCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">

            <ImageView
                android:id="@+id/ivCurrentUser"
                android:layout_width="115dp"
                android:layout_height="115dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="15dp"
                android:padding="10dp"
                android:src="@drawable/ic_person" />

            <TextView
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ivCurrentUser"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_view"
                android:drawablePadding="4dp"
                android:padding="10dp"
                android:text="@string/my_name"
                android:textAlignment="center"
                android:textColor="@color/greyBackground"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtName"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_view"
                android:drawablePadding="4dp"
                android:padding="10dp"
                android:textAlignment="center"
                android:text="@string/my_mobile"
                android:textColor="@color/greyBackground"
                android:textSize="15sp" />


            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtMobileNumber"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_view"
                android:drawablePadding="4dp"
                android:padding="10dp"
                android:textAlignment="center"
                android:text="@string/my_email"
                android:textColor="@color/greyBackground"
                android:textSize="15sp" />


            <TextView
                android:id="@+id/txtAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtEmail"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_view"
                android:drawablePadding="4dp"
                android:padding="10dp"
                android:textAlignment="center"
                android:text="@string/my_address"
                android:textColor="@color/greyBackground"
                android:textSize="15sp" />


        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>