<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:layout_margin="8dp"
    android:background="@color/white"
    app:cardCornerRadius="4dp"
    app:cardElevation="3dp">


    <LinearLayout
        android:id="@+id/llRestaurant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5.5">


        <ImageView
            android:id="@+id/ivRestaurant"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtRestaurantName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/my_restaurant"
                android:textColor="@color/lighterGray"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txtRestaurantId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/my_restaurant"
                android:textColor="@color/lighterGray"
                android:visibility="gone"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txtCostForOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="5dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/my_price"
                android:textSize="14sp"
                app:drawableStartCompat="@drawable/ic_rupee" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">


            <ImageView
                android:id="@+id/ivFavourite"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:src="@drawable/ic_unfavorite" />

            <TextView
                android:id="@+id/txtRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="5dp"
                android:text="@string/my_rating"
                android:textColor="#232323"
                android:textSize="15sp"
                android:textStyle="bold"
                />


        </RelativeLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>